--- a/DIscounted_price.ipynb
+++ b/DIscounted_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "[1465 rows x 1 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -657,8 +657,8 @@
      "output_type": "stream",
      "text": [
       "fastText exists.\n",
-      "CPU times: user 84 µs, sys: 58 µs, total: 142 µs\n",
-      "Wall time: 118 µs\n"
+      "CPU times: user 563 µs, sys: 168 µs, total: 731 µs\n",
+      "Wall time: 6.61 ms\n"
      ]
     }
    ],
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19bfec5acc8c4910b5bfc5ebf7f6a234",
+       "model_id": "7dd334349ba342b186882af2c1cab385",
        "version_major": 2,
        "version_minor": 0
       },
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.query('rating == \"|\"')\n",
+    "df['rating'] = df['rating'].str.replace('|', '4.0').astype('float64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,14 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -919,34 +922,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "30/30 [==============================] - 2s 39ms/step - loss: 0.8077 - val_loss: 0.6527\n",
+      "30/30 [==============================] - 2s 34ms/step - loss: 0.7845 - val_loss: 0.6460\n",
       "Epoch 2/10\n",
-      "30/30 [==============================] - 1s 19ms/step - loss: 0.6731 - val_loss: 0.5725\n",
+      "30/30 [==============================] - 1s 17ms/step - loss: 0.6827 - val_loss: 0.5796\n",
       "Epoch 3/10\n",
-      "30/30 [==============================] - 1s 18ms/step - loss: 0.6015 - val_loss: 0.5270\n",
+      "30/30 [==============================] - 1s 23ms/step - loss: 0.6276 - val_loss: 0.5295\n",
       "Epoch 4/10\n",
-      "30/30 [==============================] - 1s 25ms/step - loss: 0.5634 - val_loss: 0.4925\n",
+      "30/30 [==============================] - 0s 16ms/step - loss: 0.5958 - val_loss: 0.5134\n",
       "Epoch 5/10\n",
-      "30/30 [==============================] - 1s 23ms/step - loss: 0.5741 - val_loss: 0.5074\n",
+      "30/30 [==============================] - 1s 19ms/step - loss: 0.5677 - val_loss: 0.5011\n",
       "Epoch 6/10\n",
-      "30/30 [==============================] - 1s 17ms/step - loss: 0.5683 - val_loss: 0.4953\n",
+      "30/30 [==============================] - 1s 17ms/step - loss: 0.5563 - val_loss: 0.4906\n",
       "Epoch 7/10\n",
-      "30/30 [==============================] - 1s 21ms/step - loss: 0.5599 - val_loss: 0.4897\n",
+      "30/30 [==============================] - 1s 17ms/step - loss: 0.5543 - val_loss: 0.4823\n",
       "Epoch 8/10\n",
-      "30/30 [==============================] - 1s 18ms/step - loss: 0.5552 - val_loss: 0.4864\n",
+      "30/30 [==============================] - 0s 16ms/step - loss: 0.5409 - val_loss: 0.4776\n",
       "Epoch 9/10\n",
-      "30/30 [==============================] - 0s 16ms/step - loss: 0.5522 - val_loss: 0.4845\n",
+      "30/30 [==============================] - 1s 22ms/step - loss: 0.5382 - val_loss: 0.4770\n",
       "Epoch 10/10\n",
-      "30/30 [==============================] - 0s 16ms/step - loss: 0.5504 - val_loss: 0.4831\n"
+      "30/30 [==============================] - 1s 23ms/step - loss: 0.5366 - val_loss: 0.4778\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x367f8e5e0>"
+       "<keras.callbacks.History at 0x14f5dc400>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,47 +1012,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10/10 [==============================] - 0s 14ms/step - loss: 0.5483\n"
+      "10/10 [==============================] - 0s 12ms/step - loss: 0.5451\n",
+      "10/10 [==============================] - 0s 5ms/step\n",
+      "0.48065837709751946\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.5482922196388245"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Evaluate the model\n",
-    "model.evaluate([X_test_text, X_test_num], y_test)"
+    "model.evaluate([X_test_text, X_test_num], y_test)\n",
+    "\n",
+    "# get the r2 score\n",
+    "from sklearn.metrics import r2_score\n",
+    "y_pred = model.predict([X_test_text, X_test_num])\n",
+    "print(r2_score(y_test, y_pred))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['<BOS>', 'dont', 'like', '<EOS>']\n",
-      "1/1 [==============================] - 0s 78ms/step\n",
-      "[[-0.38366398]]\n",
-      "Review title: Dont like.\n",
-      "Actual price: 600\n",
-      "Predicted discounted price: 461.94\n"
+      "['<BOS>', 'unsatisfiedcharging', 'is', 'really', 'slowvalue', 'for', 'moneyproduct', 'reviewbad', 'qualitybad', 'productbad', 'productas', 'of', 'now', 'seems', 'bad', '<EOS>']\n",
+      "1/1 [==============================] - 0s 35ms/step\n",
+      "[[-0.3665088]]\n",
+      "Review title: Unsatisfied,Charging is really slow,Value for money,Product review,bad quality,bad product,bad Product,As of now seems bad.\n",
+      "Actual price: 1099\n",
+      "Predicted discounted price: 581.03\n"
      ]
     }
    ],
@@ -1073,7 +1073,7 @@
     "    sent += ['<pad>'] * (max_len - len(sent))\n",
     "\n",
     "    input_ids = [word2idx[word] if word in word2idx else word2idx['<unk>'] for word in sent]\n",
-    "    pred_int_input = input_scaler.transform(np.array([[actual_price]]))\n",
+    "    pred_int_input = act_price_scaler.transform(np.array([[actual_price]]))\n",
     "\n",
     "    input_ids = np.array(input_ids).reshape(1, -1)\n",
     "    # Predict the discounted price\n",
@@ -1084,9 +1084,9 @@
     "    discounted_price = output_scaler.inverse_transform(pred.reshape(-1, 1))\n",
     "    return discounted_price[0][0]\n",
     "\n",
-    "actual_price = 600\n",
+    "actual_price = 1099\n",
     "#rating_count = 400000\n",
-    "text = \"Dont like.\"\n",
+    "text = \"Unsatisfied,Charging is really slow,Value for money,Product review,bad quality,bad product,bad Product,As of now seems bad.\"\n",
     "\n",
     "predicted_discount_price = predict(text, actual_price)\n",
     "\n",
@@ -1099,8 +1099,135 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Using Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 Score:  0.9239323224149196\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Applying Preprocessing using Standard Scaler\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "X2 = df[['actual_price', 'rating', 'rating_count']]\n",
+    "y2 = df['discounted_price']\n",
+    "\n",
+    "X2 = scaler.fit_transform(X2)\n",
+    "output_scaler = StandardScaler()\n",
+    "y2 = output_scaler.fit_transform(np.array(y2).reshape(-1,1))\n",
+    "\n",
+    "\n",
+    "X2_train, X2_test, y2_train, y2_test = train_test_split(X2,y2,random_state = 21, test_size = 0.3)\n",
+    "\n",
+    "regss = LinearRegression()\n",
+    "regss.fit(X2_train, y2_train)\n",
+    "\n",
+    "y2_pred = regss.predict(X2_test)\n",
+    "print('R2 Score: ', r2_score(y2_test, y2_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.39273074],\n",
+       "       [-0.42154116],\n",
+       "       [-0.42154116],\n",
+       "       ...,\n",
+       "       [-0.13055596],\n",
+       "       [-0.24867867],\n",
+       "       [-0.03778643]])"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1000000, 5.0, 100000]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make a prediction for an example of an out-of-sample observation\n",
+    "actual_price = 1000000\n",
+    "rating = 5.0\n",
+    "rating_count = 100000\n",
+    "\n",
+    "input = [[actual_price, rating, rating_count]]\n",
+    "Xnew = scaler.transform(input)\n",
+    "\n",
+    "print(input)\n",
+    "\n",
+    "# transform the input into a 1d array\n",
+    "#Xnew = [[actual_price, rating, rating_count]]\n",
+    "\n",
+    "# make a prediction\n",
+    "ynew = regss.predict(Xnew)\n",
+    "\n",
+    "ynew = output_scaler.inverse_transform(ynew)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[595626.2873184]])"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ynew"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
