--- a/predicting_category.ipynb
+++ b/predicting_category.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7TeWnJWqqAHx2iRvmFe4C",
+      "authorship_tag": "ABX9TyMBZjellT6wrs/ORNaR0Bft",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 177,
       "metadata": {
         "id": "ObWn2EbyFv_a"
       },
@@ -43,6 +43,7 @@
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from keras.preprocessing.text import Tokenizer\n",
         "from keras.utils import pad_sequences\n",
+        "from keras.layers import Bidirectional\n",
         "import warnings\n",
         "import random\n",
         "warnings.filterwarnings(\"ignore\")"
@@ -366,7 +367,7 @@
         "model = Sequential()\n",
         "model.add(Embedding(2000, 128, input_length = 424))\n",
         "model.add(SpatialDropout1D(0.4))\n",
-        "model.add(LSTM(196, dropout=0.2, recurrent_dropout=0.2))\n",
+        "model.add(Bidirectional(LSTM(196, dropout=0.2, recurrent_dropout=0.2)))\n",
         "model.add(Dense(9,activation='softmax'))\n",
         "model.compile(loss = 'categorical_crossentropy', optimizer='adam',metrics = ['accuracy'])\n",
         "\n",
