model2 linear & svm after sentiment analysis

--- a/model2.ipynb
+++ b/model2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1mHHvEHYOdUfXSvZagy34_0gRNpCq-JLc",
-      "authorship_tag": "ABX9TyNSIo0XE4ddbylduQvS9T/J",
+      "authorship_tag": "ABX9TyPGefCmy2mFOjeBNNJmwLgG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,12 +66,14 @@
         "import re\n",
         "from tqdm import tqdm\n",
         "from sklearn.model_selection import train_test_split\n",
-        "import math"
+        "import math\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")"
       ],
       "metadata": {
         "id": "d6tVsqbFTDDM"
       },
-      "execution_count": 104,
+      "execution_count": 121,
       "outputs": []
     },
     {
@@ -317,58 +319,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ihANVknoWmCD",
-        "outputId": "fe8a2d80-b335-41fb-b58a-3446b467997f"
+        "outputId": "31f9ab33-bde7-4594-8475-ae0b2cbb8549"
       },
-      "execution_count": 106,
+      "execution_count": 122,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-106-223550e0fe9d>:9: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  dfText.iloc[:,column] = dfText.iloc[:,column].apply(lambda x: x.lower())\n",
-            "<ipython-input-106-223550e0fe9d>:10: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  dfText.iloc[:,column] = dfText.iloc[:,column].apply((lambda x: re.sub(r\"http\\S+\",\" \",x)))\n",
-            "<ipython-input-106-223550e0fe9d>:11: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  dfText.iloc[:,column] = dfText.iloc[:,column].apply((lambda x: re.sub('[^a-zA-z0-9\\s]',\" \",x)))\n",
-            "<ipython-input-106-223550e0fe9d>:9: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  dfText.iloc[:,column] = dfText.iloc[:,column].apply(lambda x: x.lower())\n",
-            "<ipython-input-106-223550e0fe9d>:10: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  dfText.iloc[:,column] = dfText.iloc[:,column].apply((lambda x: re.sub(r\"http\\S+\",\" \",x)))\n",
-            "<ipython-input-106-223550e0fe9d>:11: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  dfText.iloc[:,column] = dfText.iloc[:,column].apply((lambda x: re.sub('[^a-zA-z0-9\\s]',\" \",x)))\n",
-            "<ipython-input-106-223550e0fe9d>:14: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  dfText['combined'] = dfText['review_title'] + ' ' + dfText['review_content']\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -388,7 +342,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 106
+          "execution_count": 122
         }
       ]
     },
@@ -440,9 +394,9 @@
           "height": 497
         },
         "id": "-OuPN_oaZK18",
-        "outputId": "be20a92a-9a6a-4dfe-8082-f2b9842e973f"
+        "outputId": "ab4de8ec-031f-4265-a3a2-deb522d70d8c"
       },
-      "execution_count": 108,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,7 +404,7 @@
           "text": [
             "No model was supplied, defaulted to distilbert-base-uncased-finetuned-sst-2-english and revision af0f99b (https://huggingface.co/distilbert-base-uncased-finetuned-sst-2-english).\n",
             "Using a pipeline without specifying a model name and revision in production is not recommended.\n",
-            "100%|██████████| 1465/1465 [02:19<00:00, 10.49it/s]\n"
+            "100%|██████████| 1465/1465 [02:11<00:00, 11.18it/s]\n"
           ]
         },
         {
@@ -474,7 +428,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-53c98f50-c5d1-46af-a2f0-cdb4a226aaa1\">\n",
+              "  <div id=\"df-ef9553dd-afff-4bdc-8e01-e51ef36035a1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -558,7 +512,7 @@
               "</table>\n",
               "<p>1465 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-53c98f50-c5d1-46af-a2f0-cdb4a226aaa1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ef9553dd-afff-4bdc-8e01-e51ef36035a1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -609,12 +563,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-53c98f50-c5d1-46af-a2f0-cdb4a226aaa1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ef9553dd-afff-4bdc-8e01-e51ef36035a1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-53c98f50-c5d1-46af-a2f0-cdb4a226aaa1');\n",
+              "          const element = document.querySelector('#df-ef9553dd-afff-4bdc-8e01-e51ef36035a1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -637,15 +591,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 108
+          "execution_count": 124
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#Applying Preprocessing using Standard Scaler\n",
-        "\n",
+        "#multiple linear regression\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.metrics import r2_score\n",
@@ -725,9 +678,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qEv9DO5Us05p",
-        "outputId": "6ba360b0-fb7f-436f-dad3-5c069be18eb3"
+        "outputId": "e274f888-3b53-4de0-82f3-978e321ce9b8"
       },
-      "execution_count": 119,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,13 +689,86 @@
             "[[359.97, 4.8, 169381, 0.9949361085891724]]\n",
             "suggested discounted price: 226.44098983213007\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#SVM\n",
+        "from sklearn.svm import SVR\n",
+        "\n",
+        "#fit on SVM regressor with Gaussian RBF kernel\n",
+        "regressor = SVR(kernel = 'linear') #linear=0.927 or rbf=0.890\n",
+        "regressor.fit(X_train, y_train)\n",
+        "\n",
+        "#predict and print R2\n",
+        "y_pred = regressor.predict(X_test)\n",
+        "print('R2 Score: ', r2_score(y_test, y_pred))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "ZF38QvCR9S--",
+        "outputId": "53a23f7d-e940-4db9-8721-447eee7546ee"
+      },
+      "execution_count": 130,
+      "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
+          "name": "stdout",
           "text": [
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
-            "  warnings.warn(\n"
+            "R2 Score:  0.9278980188449124\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# make a prediction for an example of an out-of-sample observation\n",
+        "#Blink Outdoor (3rd Gen) - wireless, weather-resistant HD security camera, two-year battery life, motion detection, set up in minutes – 4 camera system\n",
+        "actual_price = 359.97\n",
+        "rating = 4.6\n",
+        "rating_count = 16938\n",
+        "review = '4.0 out of 5 stars Still A Good Buy, Still A Bit Lacking...'\n",
+        "#review = 'Works pretty good'\n",
+        "\n",
+        "#sentiment analysis\n",
+        "rev_sent = sentiment_pipeline(review[:512])\n",
+        "#positive score if label='POSITIVE' else negative\n",
+        "if (rev_sent[0]['label'] == 'POSITIVE'):\n",
+        "    sentiment = review_sentiment[0]['score']\n",
+        "else:\n",
+        "    sentiment = -1 * review_sentiment[0]['score']\n",
+        "\n",
+        "input = [[actual_price, rating, rating_count, sentiment]]\n",
+        "Xnew = scaler.transform(input)\n",
+        "\n",
+        "# make a prediction\n",
+        "ynew = regressor.predict(Xnew)\n",
+        "\n",
+        "ynew = output_scaler.inverse_transform(ynew.reshape(1, -1))\n",
+        "\n",
+        "print(input)\n",
+        "print(f'suggested discounted price: {ynew[0][0]}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KqtkRmb4-rWF",
+        "outputId": "4c571f40-705f-4372-eb75-f39a478c52be"
+      },
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[359.97, 4.6, 16938, -0.9949361085891724]]\n",
+            "suggested discounted price: 342.11359211896934\n"
           ]
         }
       ]
